# openstack-service-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openapi_spec.json  pyproject.toml
backend/: .env-example  app.py  log_conf.yaml  main.py
backend/api/: __init__.py  auth.py  flavor.py  floatingip.py  healthcheck.py  image.py  server.py  volume.py
backend/client/: __init__.py  base.py  cinder.py  glance.py  keystone.py  neutron.py  nova.py
backend/core/: config.py  db.py  dependency.py  exception.py  exception_handler.py
backend/model/: floatingip.py  securitygroup.py  server.py  volume.py
backend/repository/: base.py  floatingip.py  server.py  volume.py
backend/schema/: auth.py  floatingip.py  oa_base.py  query.py  response.py  server.py  volume.py
backend/service/: auth.py  flavor.py  floatingip.py  image.py  server.py  volume.py
backend/util/: constant.py  func.py
test/: conftest.py
test/api/: test_auth.py  test_basic.py  test_floatingip.py  test_server.py  test_volume.py
test/mock/: cinder.py  glance.py  keystone.py  neutron.py  nova.py  response.py  task.py
test/unit/: test_exception_parser.py  test_query.py  test_repository.py  test_task.py
