[tool.poetry]
name = "bada-openstack-cloud-api"
version = "0.1.0"
description = ""
authors = ["bada <dhchoi@gabia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
aiomysql = "^0.2.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
cryptography = "^42.0.2"
aiohttp = "^3.9.3"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
